@@ -696,24 +696,6 @@ class WholeClassAnalysis:
         ## anndata to pd.DataFrame:
         data_points = pd.DataFrame(data.X)
         data_points.columns = data.var.index.astype('str')
-    
-        to_add = []
-        if (include_marker_class_row is True) & (groupby_columns is None):
-            data_points = data_points.T
-            marker_class_dict = {'none' : 0, 'type' : 1, 'state' : 2, 'spatial_edt' : 3, 'other': 4}     # so not mixed type on read
-            data_points['marker_class'] = list(data.var['marker_class'])
-            data_points['marker_class'] = data_points['marker_class'].replace(marker_class_dict)
-            data_points = data_points.T
-            to_add = [4]
-    
-        if groupby_columns is None:
-            try:
-                data_points["centroid_X"] = list(self.data.obsm['spatial'].T[0]) + to_add
-                data_points["centroid_Y"] = list(self.data.obsm['spatial'].T[1]) + to_add
-                data_points["areas"] = list(self.data.uns['areas']) + to_add
-            except Exception:
-                pass
-    
         data.obs.columns = data.obs.columns.astype('str')
         data_col_list = [i for i in data.obs.columns]
         for i in data_col_list:
@@ -722,18 +704,6 @@ class WholeClassAnalysis:
             else:
                 data_points[str(i)] = list(data.obs[str(i)])
                 data_points[str(i)] = data_points[str(i)].astype(data.obs[str(i)].dtype)
-            #data.obs[i] = data.obs[i].astype('str')
-                
-        if self._scaling == "%quantile":
-            data_points['scaling'] = str(self._scaling) + str(self._quantile_choice)
-        else:
-            data_points['scaling'] = self._scaling
-    
-        data_points['masks_folder'] = self.input_mask_folder
-    
-        if (include_marker_class_row is True) & (groupby_columns is None):
-            data_points.loc[data_points.index[-1],'scaling'] = "na"
-            data_points.loc[data_points.index[-1],'masks_folder'] = "na"
         
         # subset:
         if (subset_types is not None) and (subset_columns is not None):
@@ -753,17 +723,12 @@ class WholeClassAnalysis:
                 else:
                     output_df = output_df.merge(new_data, how = 'inner')
             data_points = output_df
+            
         if groupby_columns is None:
             if output_path is not None:
-                if self._in_gui:
-                    try:
-                        data_points.to_csv(str(output_path), index = False)
-                    except Exception:
-                        tk.messagebox.showwarning("Error writing to csv!")
-                else:
-                    data_points.to_csv(str(output_path), index = False)
-    
+                data_points.to_csv(str(output_path), index = False)
             return data_points
+
         else:
             extra_columns = None
             if len(groupby_columns) > 1:
@@ -794,16 +759,16 @@ class WholeClassAnalysis:
     
             groupby_object = groupby_object.reset_index()
             if statistic == 'count':
-                groupby_object = groupby_object.loc[groupby_object['count'].notna(),:]
+                pass
             else:
                 backup_groupby = pd.DataFrame(groupby_object[groupby_columns], index = groupby_object.index)
                 if groupby_nan_handling == 'drop':
                     groupby_object = groupby_object.drop(groupby_columns, axis = 1).dropna(how = 'all')
                 elif groupby_nan_handling == 'zero':
                     groupby_object = groupby_object.drop(groupby_columns, axis = 1).fillna(0)
+
                 groupby_object = pd.concat([backup_groupby, groupby_object], axis = 1)
-            
-    
+
             for i in data_col_list:
                 if (i in groupby_object.columns.astype('str')) and (i not in groupby_columns):
                     groupby_object = groupby_object.drop(i, axis = 1)
@@ -818,12 +783,6 @@ class WholeClassAnalysis:
     
     
             if output_path is not None:
-                if self._in_gui:
-                    try:
-                        groupby_object.to_csv(str(output_path), index = False)
-                    except Exception:
-                        tk.messagebox.showwarning("Error writing to csv!")
-                else:
-                    groupby_object.to_csv(str(output_path), index = False)
+                groupby_object.to_csv(str(output_path), index = False)
     
             return groupby_object
